--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,60 @@
+aiofiles==22.1.0
+aiohttp==3.10.11
+apscheduler
+bs4
+cinemagoer
+colorama
+countryinfo
+datetime
+pytz
+dnspython>=2.3.0
+ffmpeg
+ffmpeg-python>=0.2.0
+Flask
+fuzzywuzzy
+gTTS>=2.3.0
+googletrans>=3.1.0a0
+gunicorn>=20.1.0
+hachoir
+Heroku3
+humanize>=4.6.0
+httpx[http2]
+itsdangerous>=2.0.0
+jinja2
+NumPy
+openai>=0.25.0
+opencv-python-headless>=4.7.0.68
+Pillow>=9.4.0
+psutil>=5.9.0
+pycryptodome
+pygments
+pyromod
+pymongo==4.11.1  
+motor==3.7.0
+marshmallow==3.20.1
+umongo==3.1.0
+PyPDF2
+python-decouple
+python-dotenv>=0.21.0
+python-Levenshtein
+pyshorteners
+requests
+search_engine_parser
+shortzy
+speedtest>=0.0.1
+speedtest-cli
+telegraph 
+tgcrypto==1.2.5
+pyrotgfork
+ujson
+wget
+werkzeug>=2.0
+wheel
+yt-dlp
+youtube-dl
+youtube-search
+youtube-search-python>=1.4.6
+ytthumb
+git+https://github.com/agronholm/anyio
 git+https://github.com/Joelkb/cinemagoer
 pyrofork==2.3.45
-tgcrypto
-pymongo[srv]==3.12.3
-motor==2.5.1 
-marshmallow==3.14.1 
-umongo==3.0.1
-requests
-bs4
-aiohttp
-asyncio
-pytz
-psutil==5.9.4
